Fixed modalContainer not having a scrollbar when needed

--- a/less/stylesheets/sections/main.less
+++ b/less/stylesheets/sections/main.less
@@ -21,8 +21,6 @@
 }
 
 .songList {
-  max-height: 101%;
-  overflow-x: hidden;
   width: 100%;
 }
 
