--- a/less/stylesheets/sections/navbar.less
+++ b/less/stylesheets/sections/navbar.less
@@ -59,6 +59,8 @@
   border-left: 1px solid @background-dark;
   height: 93.9vh;
   top: 50px;
+  overflow: auto;
+  overflow-x: hidden;
 
   & > *{
     //margin-left: 10px;
